fix(launcher): Booster section and alignments

--- a/src/app/launcher/step-indicator/step-indicator.component.less
+++ b/src/app/launcher/step-indicator/step-indicator.component.less
@@ -59,9 +59,7 @@
             width: 250px;
             color: @color-pf-black-400;
             &:hover {
-              // background: @color-pf-black-700;
-              .gradient-animation( @color-pf-blue, @color-pf-black-900, 1s );
-              // background: linear-gradient(-90deg, @color-pf-black-900, @color-pf-blue);
+              background: @color-pf-black-700;
               text-decoration: none;
               border-left: 3px solid;
               /* stylelint-disable-next-line declaration-no-important */
