--- a/src/assets/stylesheets/shared/_layout.less
+++ b/src/assets/stylesheets/shared/_layout.less
@@ -2,6 +2,10 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
+  /* stylelint-disable */
+  /* required to overwrite the default PatternFly font size */
+  font-size: @font-size-base !important;
+  /* stylelint-enable */
   min-height: 100vh;
   position: relative;
   margin: 0;
